@@ -26,6 +26,7 @@ import edu.colorado.phet.common.piccolophet.PhetPCanvas;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.event.HighlightHandler.PaintHighlightHandler;
+import edu.colorado.phet.common.piccolophet.event.SliderThumbDragHandler;
 import edu.colorado.phet.common.piccolophet.util.PNodeLayoutUtils;
 import edu.colorado.phet.moleculepolarity.MPConstants;
 import edu.colorado.phet.moleculepolarity.MPStrings;
@@ -269,7 +270,7 @@ public class ElectronegativityControlNode extends PhetPNode {
     }
 
     // Drag handler for the thumb, snaps to closest tick mark.
-    private static class ThumbDragHandler extends SliderDragHandler {
+    private static class ThumbDragHandler extends SliderThumbDragHandler {
 
         private final Molecule2D molecule;
         private final double snapInterval; // slider snaps to closet model value in this interval
